feat(platform): harden end-to-end business workflows